tests/errors/stop_code_wrong_type_01.f90
program stop_code_wrong_type_01
real :: x
x = 5.0
stop x
end program
